tests/kyverno/resources/fail-host-namespaces.yaml
# Violates: disallow-host-namespaces / host-namespaces
apiVersion: v1
kind: Pod
metadata:
  name: fail-host-namespaces
  namespace: test-ns
spec:
  hostNetwork: true                       # VIOLATION
  containers:
    - name: app
      image: nginx:1.25
      resources:
        limits:
          cpu: "100m"
          memory: "128Mi"
      securityContext:
        privileged: false
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        runAsUser: 1000
        readOnlyRootFilesystem: true
