tests/kyverno/resources/fail-latest-tag.yaml
# Violates: disallow-latest-tag / latest-tag
apiVersion: v1
kind: Pod
metadata:
  name: fail-latest-tag
  namespace: test-ns
spec:
  containers:
    - name: app
      image: nginx:latest                 # VIOLATION
      resources:
        limits:
          cpu: "100m"
          memory: "128Mi"
      securityContext:
        privileged: false
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        runAsUser: 1000
        readOnlyRootFilesystem: true
